Настроен docker-compose